--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
   - docker build -t example-madoc-config .
 
 before_script:
+  - pip install --user awscli
+  - export PATH=$PATH:$HOME/.local/bin
   - docker-compose up -d
   - ./.travis/wait-for-omeka.sh
 
@@ -25,7 +27,18 @@ cache:
   bundler: true
   directories:
     - $HOME/docker
+    - $HOME/.local
+
+
+# Example of Docker deployment (push to docker + optional ECS)
+#deploy:
+#  # Publishing tags
+#  - provider: script
+#    script: bash ./.travis/docker-deploy.sh digirati/nlw-madoc
+#    on:
+#      tags: true
 
 if: |
   branch = master OR \
-  type = pull_request
+  type = pull_request OR \
+  tag IS present
