--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,9 @@ services:
     ports:
       - "8898:80"
     volumes:
-      - ./custom-madoc-theme:/srv/omeka/themes/custom-madoc-theme
+      - ./custom-madoc-theme:/srv/omeka/themes/custom-madoc-theme:Z
+      - ./translations/s:/srv/omeka/translations/s:Z
+
 
   mysql:
     container_name: madoc-example-database
